# LunchTrack

./: .gitignore  README.md
src/: pyproject.toml
src/apps/lunch_organizer/: admin.py  apps.py
src/apps/lunch_organizer/api/: urls.py
src/apps/lunch_organizer/api/serializers/: __init__.py  classroom_serializers.py  students_serializers.py
src/apps/lunch_organizer/api/views/: __init__.py  classroom_views.py  students_views.py
src/apps/lunch_organizer/migrations/: 0001_initial.py  0002_rename_students_student.py  0002_student_scholar_year.py  0003_alter_classroom_unique_together_and_more.py  0004_alter_classroom_unique_together.py
src/apps/lunch_organizer/models/: __init__.py  classroom.py  student.py  students.py
src/apps/users/api/: urls.py
src/apps/users/api/serializers/: user_serializers.py
src/apps/users/api/views/: user_views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/models/: __init__.py  abstract.py  user.py
src/apps/workcalendar/: admin.py  apps.py
src/apps/workcalendar/api/: urls.py
src/apps/workcalendar/api/serializers/: workcalendar_serializers.py
src/apps/workcalendar/api/views/: workcalendar_views.py
src/apps/workcalendar/migrations/: 0001_initial.py
src/apps/workcalendar/models/: abstract.py  workcalendar.py
src/backend/: urls.py
src/backend/settings/: base.py  local.py  production.py
